feat: 新增取得支援的年份列表 API
