# docs/swagger.yaml
@@ -178,6 +178,25 @@ paths:
       summary: 健康檢查
       tags:
       - 系統
+  /taiwan-calendar/supported-years:
+    get:
+      description: 取得目前 API 支援的所有年份資料
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 支援的年份清單
+          schema:
+            items:
+              type: string
+            type: array
+        "500":
+          description: 伺服器內部錯誤
+          schema:
+            $ref: '#/definitions/controller.ErrorResponse'
+      summary: 取得支援的年份清單
+      tags:
+      - taiwan-calendar
 schemes:
 - http
 - https
